# action-python-security-auditing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  scorecard.yml
src/python_security_auditing/: __init__.py  __main__.py  pr_comment.py  report.py  runners.py  settings.py
tests/: test_pr_comment.py  test_report.py  test_runners.py  test_settings.py
tests/fixtures/: bandit_clean.json  bandit_clean.sarif  bandit_issues.json  bandit_issues.sarif  pip_audit_fixable.json  pip_audit_unfixable.json
