[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-security-auditing"
version = "0.4.0"
description = "Reusable GitHub Action for Python security auditing with bandit and pip-audit"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.0",
    "pip-audit>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "mypy>=1.0",
    "ruff>=0.5",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_security_auditing"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
